--- a/blog/blog.css
+++ b/blog/blog.css
@@ -226,7 +226,7 @@ h2, h3, h4, .stream-entry {
 }
 
 .post-title {
-    font-size: 42px;
+    font-size: 32px;
     font-weight: 700;
     margin: 0 0 16px;
     color: var(--text);
@@ -472,6 +472,7 @@ h2, h3, h4, .stream-entry {
     }
     
     .post-meta {
+        justify-content: left;
         align-items: flex-start;
         gap: 6px;
     }
@@ -489,7 +490,8 @@ h2, h3, h4, .stream-entry {
     }
     
     .post-title {
-        font-size: 32px;
+        text-align: left;
+        font-size: 25px;
     }
     
     .post-content {
