--- a/blog/blog.css
+++ b/blog/blog.css
@@ -273,12 +273,14 @@ h2, h3, h4, .stream-entry {
 }
 
 .post-content h2 {
-    line-height: 1.2;
     font-size: 25px;
     font-weight: 600;
     margin: 40px 0 20px;
-    color: var(--text);
     font-family: var(--font-main), monospace;
+    letter-spacing: -0.02em;
+    line-height: 1;
+    color: var(--accent-light);
+    animation: rainbow 15s ease-in-out infinite;
 }
 
 .post-content h3 {
@@ -503,7 +505,7 @@ h2, h3, h4, .stream-entry {
     }
 
     .post-content h2 {
-        font-size: 22#000000px;
+        font-size: 20px;
     }
     
     .post-content h3 {
